# agentproxy

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  requirements.txt  showprompt.py
 allow_agent.egg-info/: PKG-INFO.txt
agentproxy/: README.md  __init__.py  test_agentproxy.py
agentproxy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
allow_agent/: README.md  __init__.py  safety.py
allow_agent.egg-info/: PKG-INFO
examples/: browseruse_basic.py  langchain_basic.py  openai_basic.py  openai_block_promptinject.py  requests_basic.py
prompts/: prompts.json
showprompt.egg-info/: PKG-INFO
web/templates/: index.html
