[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentproxy"
version = "0.1.0"
description = "A lightweight HTTP proxy for AI agents."
readme = "README.md"
authors = [
    {name = "agentproxy"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["agent", "proxy", "llm", "prompt", "agentic", "ai", "openai", "log"]
dependencies = []
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/yourusername/agentproxy"
Issues = "https://github.com/yourusername/agentproxy/issues"

[tool.setuptools]
packages = ["agentproxy"] 